<resources>
    <string name="app_name">TravelApp</string>

    <!-- formats -->
    <string name="date_format">d.M.yyyy</string>
    <string name="date_picker_format">%1$d.%2$d.%3$d</string>
    <string name="km_display_format">%1$s km</string>

    <!-- navbar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navbar_my_trips">My Trips</string>
    <string name="navbar_add_trip">Add Trip</string>
    <string name="navbar_trip_details">Trip Details</string>
    <string name="navbar_edit_trip">Edit Trip</string>
    <string name="navbar_add_stop">Add Stop</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_statistics">Statistics</string>
    <string name="navbar_world_map">World Map</string>
    <string name="navbar_city_coordinates">City Coordinates</string>

    <!-- fragment keys / preference keys -->
    <string name="fragment_key_trip_id">tripId</string>
    <string name="fragment_key_year">year</string>
    <string name="fragment_request_key_view">requestKeyView</string>
    <string name="fragment_request_key_edit">requestKeyEdit</string>
    <string name="fragment_request_key_year">requestKeyYear</string>
    <string name="fragment_key_top10chart">TOP_10_DATA</string>
    <string name="fragment_request_key_top10chart">REQUEST_TOP_10_DATA</string>
    <string name="fragment_key_cloud_chart">CLOUD_DATA</string>
    <string name="fragment_request_key_cloud_chart">REQUEST_CLOUD_DATA</string>
    <string name="fragment_key_area_chart">AREA_DATA</string>
    <string name="fragment_request_key_area_chart">REQUEST_AREA_DATA</string>
    <string name="fragment_key_bubble_chart">BUBBLE_DATA</string>
    <string name="fragment_request_key_bubble_chart">REQUEST_BUBBLE_DATA</string>
    <string name="home_country_key">HOME COUNTRY</string>
    <string name="home_city_key">HOME CITY</string>
    <string name="preferences_id">app_preferences_id</string>

    <!-- character limits -->
    <string name="char_limit_description">35</string>
    <string name="char_limit_country_or_city">20</string>
    <string name="char_limit_lat_long">9</string>

    <!-- statistics / charts -->
    <string name="title_top_10_places">Top 10 Most Visited Places</string>
    <string name="charts_top10_y_axis">Number of Visits</string>
    <string name="title_countries_cloud">All Visited Countries</string>
    <string name="title_kms_area_chart">"Travelled Distance per Year "</string>
    <string name="title_kms_bubble_chart">"Trips made per Year "</string>
    <string name="kms_area_chart_y_axis">  kms</string>
    <string name="text_visited_countries">You have visited %1$d countries so far!</string>
    <string name="text_visited_places">You have been to %1$d different places so far!</string>
    <string name="text_radio_countries_cloud">Show countries</string>
    <string name="text_radio_cities_cloud">Show places</string>
    <string name="kms_bubble_chart_y_axis">Number of trips</string>
    <string name="icon_description_go_back">Icon for going back</string>
    <string name="icon_description_world_map">Map of the world</string>
    <string name="icon_description_open_chart">Icon for opening chart</string>
    <string name="text_radio_top10_all">Overall</string>
    <string name="text_radio_top10_2yrs">Last 2 years</string>
    <string name="text_radio_top10_5yrs">Last 5 years</string>
    <string name="text_radio_top10_10yrs">Last 10 years</string>

    <!-- views -->
    <string name="text_from">From</string>
    <string name="text_country">Country</string>
    <string name="text_city">City or Place</string>
    <string name="text_to">To</string>
    <string name="text_trip_start">Start</string>
    <string name="text_trip_end">End</string>
    <string name="text_trip_description">Description</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_empty_field_error">Field is empty</string>
    <string name="text_date_format_error">Date format is invalid</string>
    <string name="text_end_date_error">End date is before start date</string>
    <string name="text_go_to_trips">Go to My Trips</string>
    <string name="text_add_another_trip">Add another Trip</string>
    <string name="header_start_date">Start Date</string>
    <string name="header_end_date">End Date</string>
    <string name="text_edit">edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_trip_deleted">Trip deleted</string>
    <string name="text_trip_updated">Trip was updated</string>
    <string name="text_radio_return">Return trip</string>
    <string name="text_radio_one_way">One way</string>
    <string name="text_radio_multi">Multi stop</string>
    <string name="text_add_next_stop">Add next stop</string>
    <string name="text_trip_completed">Trip completed</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="text_location_error">Not in DB. Add manually.</string>
    <string name="text_distance">Distance</string>
    <string name="multi_stop_number_text">Stop number: %1$d\n</string>
    <string name="multi_stop_next_stop_text">Next stop: %1$s\n</string>
    <string name="multi_stop_final_stop_text">Final stop</string>
    <string name="calculate_loc_image_description">Calculate</string>
    <string name="date_picker_image_description">open calendar</string>
    <string name="add_edit_trip_image_description">Add or edit your trip</string>
    <string name="dropdown_arrow_image_description">Dropdown arrow</string>
    <string name="wait_message">This might take a while</string>
    <string name="import_trips">Import Trip History</string>
    <string name="delete_trips">Delete Database</string>
    <string name="text_world_map_travel">You have travelled the equivalent of %1$.2f times around the world!</string>
    <string name="text_input_error">Remove commas and apostrophes</string>
    <string name="text_location">Location</string>
    <string name="text_search">search</string>
    <string name="text_search_entry_error">Country AND city cannot be empty</string>
    <string name="text_search_location_error">Location does not exist in DB</string>
    <string name="text_id">ID</string>
    <string name="text_import">IMPORT</string>
    <string name="text_export">EXPORT</string>
    <string name="export_all_data">Export all data</string>
    <string name="export_path">csv files will be stored under: %1$s</string>
    <string name="text_set_home">SET HOME LOCATION</string>
    <string name="text_tables_empty_error">"Import Geo Data and Trip History first "</string>
    <string name="import_geo_data">Import Geo Data</string>
    <string name="text_start_date_error">Start date must be after End date of previous stop</string>

    <!-- toasts -->
    <string name="toast_trip_history_to_db">Trip History added to database</string>
    <string name="toast_export_all_data">All data exported as csv-files</string>
    <string name="toast_trip_history_in_db">Trip History already in database</string>
    <string name="toast_geographic_information_in_db">Geo Data already in database</string>
    <string name="toast_db_deleted">Database deleted</string>
    <string name="text_toast_home_saved">Home Location saved</string>
    <string name="text_toast_coord_saved">New coordinated saved. Recalculating distance.</string>
    <string name="toast_geographic_information_to_db">Adding geographic information to database</string>

    <!-- alert dialogs -->
    <string name="text_alert_dialog_delete_trip">Delete Trip</string>
    <string name="text_alert_dialog_delete_trip_message">Are you sure you want to delete it?</string>
    <string name="text_alert_dialog_trip_not_saved_title">Trip could not be saved</string>
    <string name="text_alert_dialog_trip_not_saved_message">Please try again later</string>
    <string name="text_alert_dialog_trip_saved_title">Trip Saved</string>
    <string name="text_alert_dialog_trip_saved_message">What do you want to do?</string>
    <string name="text_alert_dialog_stop_saved_title">Stop Saved</string>

</resources>
