<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_trips"
            android:icon="@drawable/my_trips_icon"
            android:title="@string/navbar_my_trips" />

        <item
            android:id="@+id/nav_add_trip"
            android:icon="@drawable/add_trip_icon"
            android:title="@string/navbar_add_trip" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/navbar_statistics" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/navbar_settings" />

    </group>


</menu>