<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_date"
            style="@style/list_adapter_header"
            android:layout_weight="8"
            android:text="@string/header_start_date" />

        <TextView
            android:id="@+id/end_date"
            style="@style/list_adapter_header"
            android:layout_weight="6"
            android:text="@string/header_end_date" />

        <TextView
            android:id="@+id/from_city"
            style="@style/list_adapter_header"
            android:layout_weight="11"
            android:text="@string/text_from" />

        <TextView
            android:id="@+id/to_city"
            style="@style/list_adapter_header"
            android:layout_weight="11"
            android:text="@string/text_to" />

        <TextView
            android:id="@+id/description"
            style="@style/list_adapter_header"
            android:layout_weight="18"
            android:text="@string/text_trip_description" />

    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>