<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_from"
            style="@style/text_view_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_location" />

        <AutoCompleteTextView
            android:id="@+id/search_country"
            style="@style/label_text"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/text_country"
            android:maxLength="@string/char_limit_country_or_city" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/search_city"
            style="@style/label_text"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:hint="@string/text_city"
            android:maxLength="@string/char_limit_country_or_city" />

        <Button
            android:id="@+id/btn_search_coordinates"
            style="@style/button"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:padding="10dp"
            android:text="@string/text_search">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            style="@style/list_adapter_header"
            android:layout_weight="2"
            android:text="@string/text_id" />

        <TextView
            style="@style/list_adapter_header"
            android:layout_weight="4"
            android:text="@string/text_country" />

        <TextView
            style="@style/list_adapter_header"
            android:layout_weight="4"
            android:text="@string/text_city" />

        <TextView
            style="@style/list_adapter_header"
            android:layout_weight="3"
            android:text="@string/text_latitude" />

        <TextView
            style="@style/list_adapter_header"
            android:layout_weight="3"
            android:text="@string/text_longitude" />

        <TextView
            style="@style/list_adapter_header"
            android:layout_width="20dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_city_coordinates"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>