<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_view_label"
        android:layout_marginTop="0dp"
        android:textSize="25sp"
        android:text="@string/text_import"/>

    <LinearLayout
        android:layout_marginStart="@dimen/label_indentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_import_geo_data"
            style="@style/button"
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:text="@string/import_geo_data">
        </Button>

        <Button
            android:id="@+id/btn_import_trips"
            style="@style/button"
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:text="@string/import_trips">
        </Button>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_view_label"
        android:textSize="25sp"
        android:text="@string/text_set_home"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/input_home_country"
            style="@style/label_text"
            android:layout_width="260dp"
            android:layout_marginStart="@dimen/label_indentation"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/text_country"
            android:maxLength="@string/char_limit_country_or_city" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/input_home_city"
            style="@style/label_text"
            android:layout_width="260dp"
            android:layout_marginStart="@dimen/label_indentation"
            android:layout_height="wrap_content"
            android:hint="@string/text_city"
            android:maxLength="@string/char_limit_country_or_city" />

        <Button
            android:id="@+id/btn_save_home"
            style="@style/button"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:padding="10dp"
            android:text="@string/text_save">

        </Button>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_view_label"
        android:textSize="25sp"
        android:text="@string/text_export"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/label_indentation">

        <Button
            android:id="@+id/btn_export_all"
            style="@style/button"
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:text="@string/export_all_data">
        </Button>

        <TextView
            android:id="@+id/export_path_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_indentation"
            style="@style/text_view_label"
            android:text="@string/text_export"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:max="100"
            android:progressDrawable="@drawable/progress_bar" />

    </LinearLayout>

</LinearLayout>