<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_from_view"
                style="@style/text_view_label"
                android:layout_height="wrap_content"
                android:text="@string/text_from" />

            <TextView
                android:id="@+id/from_country_view"
                style="@style/text_view_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/from_city_view"
            style="@style/text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_indentation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_to_view"
                style="@style/text_view_label"
                android:layout_height="wrap_content"
                android:text="@string/text_to" />

            <TextView
                android:id="@+id/to_country_view"
                style="@style/text_view_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/to_city_view"
            style="@style/text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_indentation" />

        <TextView
            android:id="@+id/to_continent_view"
            style="@style/text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_indentation" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_start_view"
                style="@style/text_view_label"
                android:layout_height="wrap_content"
                android:text="@string/text_trip_start" />

            <TextView
                android:id="@+id/trip_start_date_view"
                style="@style/text_view_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_end"
                style="@style/text_view_label"
                android:layout_height="wrap_content"
                android:text="@string/text_trip_end" />

            <TextView
                android:id="@+id/trip_end_date_view"
                style="@style/text_view_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_distance" />

            <TextView
                android:id="@+id/trip_distance_view"
                style="@style/text_view_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="2" />

        </LinearLayout>

        <TextView
            android:id="@+id/trip_description_view"
            style="@style/text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/trip_multi_trip_description_view"
            style="@style/text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_view"
                style="@style/button_trip_view"
                android:text="@string/text_cancel" />

            <Button
                android:id="@+id/btn_delete_view"
                style="@style/button_trip_view"
                android:text="@string/text_delete" />

            <Button
                android:id="@+id/btn_edit_view"
                style="@style/button_trip_view"
                android:text="@string/text_edit" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/add_trip_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:layout_weight="2"
        android:contentDescription="@string/add_edit_trip_image_description"
        android:src="@mipmap/add_trip_photo_display">

    </ImageView>


</LinearLayout>