<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/coord_id"
        style="@style/list_adapter"
        android:layout_height="45dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/coord_country"
        style="@style/list_adapter"
        android:layout_height="45dp"
        android:layout_weight="4" />

    <TextView
        android:id="@+id/coord_city"
        style="@style/list_adapter"
        android:layout_height="45dp"
        android:layout_weight="4"
        android:maxLength="@string/char_limit_country_or_city" />

    <EditText
        android:id="@+id/coord_latitude"
        style="@style/list_adapter"
        android:layout_height="45dp"
        android:layout_weight="3"
        android:maxLength="@string/char_limit_lat_long" />

    <EditText
        android:id="@+id/coord_longitude"
        style="@style/list_adapter"
        android:layout_height="45dp"
        android:layout_weight="3"
        android:maxLength="@string/char_limit_lat_long" />

    <Button
        android:id="@+id/btn_save_coordinates"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/text_save"
        android:textSize="13sp" />

</LinearLayout>

